[package]
name = "elongate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
execute = "0.2.11"
twelf = {version = "0.10.0", default-features = false, features = ["clap", "toml", "env"] }


